# rust-based-llm-assistant

./: .gitignore  README.md
backend/: Cargo.toml
backend/examples/: tool_call.rs
backend/src/: entitiy.rs  llm.rs  main.rs  session_mgmt.rs
backend/src/endpoints/: chat.rs  session.rs
frontend/: Cargo.toml  README.MD  index.html
frontend/src/: api.rs  main.rs
frontend/src/components/: app.rs  chat.rs  dashboard.rs  mod.rs
