[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

axum = "0.8.4"
tower-http = { version = "^0.6", features = ["cors"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
schemars = { version = "0.9"}

regex = { version = "1"}
uuid = { version = "1", features = ["v4"] }

async-openai = "0.28.2"
rpc-router = "0.1.3" # for automated functions calls
