[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr", "tracing"] }
leptos_router = { version = "0.8.2" }
serde = { version = "1", features = ["derive"] }
reqwasm = "0.5.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
